# craikex

Cpp/: CMakeLists.txt
Cpp/src/: Components.h  Rectangle.cpp  Rectangle.h  main.cpp
Cpp/src/loops/: DOD.cpp  DOD.h  OODCont.cpp  OODCont.h  OODPointer.cpp  OODPointer.h
Java/: pom.xml
Java/src/main/java/org/example/: Main.java  PrimitiveComponents.java  PrimitiveRectangle.java  Rectangle.java  StandardComponents.java
Java/src/main/java/org/example/loops/: DODJavaLoop.java  DODValhallaLoop.java  OODJavaLoop.java  OODValhallaLoop.java
Java/src/main/java/org/example/utils/: Matrix4f.java  Renderer.java
